src/ansible_matcher/antlr/src/CommandTemplateParser.py
# Generated from /home/popovms/course/src/ansible_matcher/antlr/grammar/CommandTemplateParser.g4 by ANTLR 4.11.1
# encoding: utf-8
from antlr4 import *
from io import StringIO
import sys
if sys.version_info[1] > 5:
	from typing import TextIO
else:
	from typing.io import TextIO


class CommandTemplateParser ( Parser ):

    grammarFileName = "CommandTemplateParser.g4"

    atn = ATNDeserializer().deserialize(serializedATN())

    decisionsToDFA = [ DFA(ds, i) for i, ds in enumerate(atn.decisionToState) ]

    sharedContextCache = PredictionContextCache()

    literalNames = [ "<INVALID>", "'<<'", "<INVALID>", "<INVALID>", "<INVALID>", 
                     "':'", "'>>'", "<INVALID>", "<INVALID>", "'m'", "'o'", 
                     "'p'" ]

    symbolicNames = [ "<INVALID>", "OPEN", "WORD", "SPACE", "FIELD_NAME", 
                      "SPEC_OPEN", "CLOSE", "INSIDE_S", "INSIDE_ANY", "SPEC_MANY", 
                      "SPEC_OPTIONAL", "SPEC_PATH", "SPECS_S", "SPECS_ANY" ]

    RULE_command_template = 0
    RULE_template_part = 1
    RULE_template_word = 2
    RULE_template_field = 3
    RULE_template_postfix = 4

    ruleNames =  [ "command_template", "template_part", "template_word", 
                   "template_field", "template_postfix" ]

    EOF = Token.EOF
    OPEN=1
    WORD=2
    SPACE=3
    FIELD_NAME=4
    SPEC_OPEN=5
    CLOSE=6
    INSIDE_S=7
    INSIDE_ANY=8
    SPEC_MANY=9
    SPEC_OPTIONAL=10
    SPEC_PATH=11
    SPECS_S=12
    SPECS_ANY=13

    def __init__(self, input:TokenStream, output:TextIO = sys.stdout):
        super().__init__(input, output)
        self.checkVersion("4.11.1")
        self._interp = ParserATNSimulator(self, self.atn, self.decisionsToDFA, self.sharedContextCache)
        self._predicates = None




    class Command_templateContext(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def template_part(self, i:int=None):
            if i is None:
                return self.getTypedRuleContexts(CommandTemplateParser.Template_partContext)
            else:
                return self.getTypedRuleContext(CommandTemplateParser.Template_partContext,i)


        def SPACE(self, i:int=None):
            if i is None:
                return self.getTokens(CommandTemplateParser.SPACE)
            else:
                return self.getToken(CommandTemplateParser.SPACE, i)

        def template_postfix(self):
            return self.getTypedRuleContext(CommandTemplateParser.Template_postfixContext,0)


        def getRuleIndex(self):
            return CommandTemplateParser.RULE_command_template

        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterCommand_template" ):
                listener.enterCommand_template(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitCommand_template" ):
                listener.exitCommand_template(self)

        def accept(self, visitor:ParseTreeVisitor):
            if hasattr( visitor, "visitCommand_template" ):
                return visitor.visitCommand_template(self)
            else:
                return visitor.visitChildren(self)




    def command_template(self):

        localctx = CommandTemplateParser.Command_templateContext(self, self._ctx, self.state)
        self.enterRule(localctx, 0, self.RULE_command_template)
        self._la = 0 # Token type
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 10
            self.template_part()
            self.state = 15
            self._errHandler.sync(self)
            _alt = self._interp.adaptivePredict(self._input,0,self._ctx)
            while _alt!=2 and _alt!=ATN.INVALID_ALT_NUMBER:
                if _alt==1:
                    self.state = 11
                    self.match(CommandTemplateParser.SPACE)
                    self.state = 12
                    self.template_part() 
                self.state = 17
                self._errHandler.sync(self)
                _alt = self._interp.adaptivePredict(self._input,0,self._ctx)

            self.state = 19
            self._errHandler.sync(self)
            _la = self._input.LA(1)
            if _la==3:
                self.state = 18
                self.template_postfix()


        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class Template_partContext(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def template_word(self, i:int=None):
            if i is None:
                return self.getTypedRuleContexts(CommandTemplateParser.Template_wordContext)
            else:
                return self.getTypedRuleContext(CommandTemplateParser.Template_wordContext,i)


        def template_field(self, i:int=None):
            if i is None:
                return self.getTypedRuleContexts(CommandTemplateParser.Template_fieldContext)
            else:
                return self.getTypedRuleContext(CommandTemplateParser.Template_fieldContext,i)


        def getRuleIndex(self):
            return CommandTemplateParser.RULE_template_part

        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterTemplate_part" ):
                listener.enterTemplate_part(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitTemplate_part" ):
                listener.exitTemplate_part(self)

        def accept(self, visitor:ParseTreeVisitor):
            if hasattr( visitor, "visitTemplate_part" ):
                return visitor.visitTemplate_part(self)
            else:
                return visitor.visitChildren(self)




    def template_part(self):

        localctx = CommandTemplateParser.Template_partContext(self, self._ctx, self.state)
        self.enterRule(localctx, 2, self.RULE_template_part)
        self._la = 0 # Token type
        try:
            self.state = 45
            self._errHandler.sync(self)
            token = self._input.LA(1)
            if token in [2]:
                self.enterOuterAlt(localctx, 1)
                self.state = 21
                self.template_word()
                self.state = 27
                self._errHandler.sync(self)
                _alt = self._interp.adaptivePredict(self._input,2,self._ctx)
                while _alt!=2 and _alt!=ATN.INVALID_ALT_NUMBER:
                    if _alt==1:
                        self.state = 22
                        self.template_field()
                        self.state = 23
                        self.template_word() 
                    self.state = 29
                    self._errHandler.sync(self)
                    _alt = self._interp.adaptivePredict(self._input,2,self._ctx)

                self.state = 31
                self._errHandler.sync(self)
                _la = self._input.LA(1)
                if _la==1:
                    self.state = 30
                    self.template_field()


                pass
            elif token in [1]:
                self.enterOuterAlt(localctx, 2)
                self.state = 33
                self.template_field()
                self.state = 39
                self._errHandler.sync(self)
                _alt = self._interp.adaptivePredict(self._input,4,self._ctx)
                while _alt!=2 and _alt!=ATN.INVALID_ALT_NUMBER:
                    if _alt==1:
                        self.state = 34
                        self.template_word()
                        self.state = 35
                        self.template_field() 
                    self.state = 41
                    self._errHandler.sync(self)
                    _alt = self._interp.adaptivePredict(self._input,4,self._ctx)

                self.state = 43
                self._errHandler.sync(self)
                _la = self._input.LA(1)
                if _la==2:
                    self.state = 42
                    self.template_word()


                pass
            else:
                raise NoViableAltException(self)

        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class Template_wordContext(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def WORD(self):
            return self.getToken(CommandTemplateParser.WORD, 0)

        def getRuleIndex(self):
            return CommandTemplateParser.RULE_template_word

        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterTemplate_word" ):
                listener.enterTemplate_word(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitTemplate_word" ):
                listener.exitTemplate_word(self)

        def accept(self, visitor:ParseTreeVisitor):
            if hasattr( visitor, "visitTemplate_word" ):
                return visitor.visitTemplate_word(self)
            else:
                return visitor.visitChildren(self)




    def template_word(self):

        localctx = CommandTemplateParser.Template_wordContext(self, self._ctx, self.state)
        self.enterRule(localctx, 4, self.RULE_template_word)
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 47
            self.match(CommandTemplateParser.WORD)
        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class Template_fieldContext(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def OPEN(self):
            return self.getToken(CommandTemplateParser.OPEN, 0)

        def FIELD_NAME(self):
            return self.getToken(CommandTemplateParser.FIELD_NAME, 0)

        def CLOSE(self):
            return self.getToken(CommandTemplateParser.CLOSE, 0)

        def SPEC_OPEN(self):
            return self.getToken(CommandTemplateParser.SPEC_OPEN, 0)

        def SPEC_MANY(self):
            return self.getToken(CommandTemplateParser.SPEC_MANY, 0)

        def SPEC_OPTIONAL(self):
            return self.getToken(CommandTemplateParser.SPEC_OPTIONAL, 0)

        def SPEC_PATH(self):
            return self.getToken(CommandTemplateParser.SPEC_PATH, 0)

        def getRuleIndex(self):
            return CommandTemplateParser.RULE_template_field

        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterTemplate_field" ):
                listener.enterTemplate_field(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitTemplate_field" ):
                listener.exitTemplate_field(self)

        def accept(self, visitor:ParseTreeVisitor):
            if hasattr( visitor, "visitTemplate_field" ):
                return visitor.visitTemplate_field(self)
            else:
                return visitor.visitChildren(self)




    def template_field(self):

        localctx = CommandTemplateParser.Template_fieldContext(self, self._ctx, self.state)
        self.enterRule(localctx, 6, self.RULE_template_field)
        self._la = 0 # Token type
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 49
            self.match(CommandTemplateParser.OPEN)
            self.state = 50
            self.match(CommandTemplateParser.FIELD_NAME)
            self.state = 61
            self._errHandler.sync(self)
            _la = self._input.LA(1)
            if _la==5:
                self.state = 51
                self.match(CommandTemplateParser.SPEC_OPEN)
                self.state = 53
                self._errHandler.sync(self)
                _la = self._input.LA(1)
                if _la==9:
                    self.state = 52
                    self.match(CommandTemplateParser.SPEC_MANY)


                self.state = 56
                self._errHandler.sync(self)
                _la = self._input.LA(1)
                if _la==10:
                    self.state = 55
                    self.match(CommandTemplateParser.SPEC_OPTIONAL)


                self.state = 59
                self._errHandler.sync(self)
                _la = self._input.LA(1)
                if _la==11:
                    self.state = 58
                    self.match(CommandTemplateParser.SPEC_PATH)




            self.state = 63
            self.match(CommandTemplateParser.CLOSE)
        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class Template_postfixContext(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def SPACE(self):
            return self.getToken(CommandTemplateParser.SPACE, 0)

        def getRuleIndex(self):
            return CommandTemplateParser.RULE_template_postfix

        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterTemplate_postfix" ):
                listener.enterTemplate_postfix(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitTemplate_postfix" ):
                listener.exitTemplate_postfix(self)

        def accept(self, visitor:ParseTreeVisitor):
            if hasattr( visitor, "visitTemplate_postfix" ):
                return visitor.visitTemplate_postfix(self)
            else:
                return visitor.visitChildren(self)




    def template_postfix(self):

        localctx = CommandTemplateParser.Template_postfixContext(self, self._ctx, self.state)
        self.enterRule(localctx, 8, self.RULE_template_postfix)
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 65
            self.match(CommandTemplateParser.SPACE)
        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx





